+ Add default URL parameters so 'service_type' and 'port' are not required.
* Convert hardcoded SNI setting to command-line argument, so it's easier to toggle (Thanks Carl A.!)
* Turn off logging of request headers during errors and exceptions; we do not want to record any private or sensitive client information.
* Fix bug with incorrect Primary Key on Observations.
	It's perfectly reasonable that we might see the same certificate used on the same site in non-contiguous blocks of time. Allow such changes to be stored in the database. (this has only been a bug since v3.0)
* Fix bug: do not update previous key's observation end time when adding a new key.
* Remove ServiceScanKeyUpdated metric types (they're not needed)
+ Add data validation to database and code for Observation records
+ Track the number of open database connections so we can see if we're leaking any
* Stop generating Traceback for socket exceptions; simply log the error and continue.
	This *significantly* improves speed and response times for scans that didn't work
	(and we're not losing any information).
+ Add documentation and script for upgrading from notary version 2.x to version 3.x.
* Add --verbose switch to scanner to generate less log data.


3.1
---
+ Add support for caching of service data with memcached, memcachier, or redis, to reduce database load.
+ Add metrics tables to allow tracking of useful performance statistics. See doc/metrics.txt for a detailed explanation.
+ Display whether a notary tracks performance metrics on the static index page
+ Add --dburl switch so db connection info can be easily passed all at once
* Fix bug where the notary server would use too many database connections (it now properly closes sessions and connections).
+ Attempt to fail gracefully in the face of catastrophic database errors
	- Attempt to fall back to the cache if we can't get data from the database
	(e.g. if there are too many connections or something went terribly wrong)